--- a/views/contact.html
+++ b/views/contact.html
@@ -4,7 +4,7 @@
     <h5>Need help? Please contact us</h5>
     <hr>
     <div class="contact">
-         Contact: <a href="mailto:{{=it.contact}}">{{=it.contact}}</a>
+         Contact: <a href="mailto:nxtbubblecom@gmail.com">nxtbubblecom@gmail.com</a>
     </div>
 </div>
 #}}
