--- a/views/account.html
+++ b/views/account.html
@@ -48,13 +48,13 @@
                     <span>{{=it.user.deposit_address}}</span>
                     <br/>
                     <br/>
-                    <strong>You must attach an unencrypted message with this number:
-                        "<span style="color: black; font-size: 120%; background-color: lightgray"> {{=it.user.id}} </span>" <span style="color: red;">*</span>
+                    <strong>You must attach an unencrypted message with only this number:
+                        <span style="color: black; font-size: 120%; background-color: lightgray"> {{=it.user.id}} </span> <span style="color: red;">*</span>
                     </strong>
 
                 </div>
 
-                <strong style="color: red;">* If you fail to attach this message <strong>unencrypted</strong>, the deposit can't be added to your account.</strong>
+                <strong style="color: red;">* If you fail to attach this message unencrypted, the deposit can't be added to your account. Be aware that after clicking the "Add message"-Checkbox, that you need to uncheck the "Encrypted Message"-Chechbox.</strong>
             </div>
             <div class="large-6 columns">
                 Transfer NXT, with the unique number attached <strong>unencrypted</strong>, to this address to have your account credited. Accounts
