--- a/views/faq.html
+++ b/views/faq.html
@@ -230,7 +230,8 @@
                 <p>
                     Absolutely! And we can prove it. Please see:
                     <a href="https://nxtforum.org/nxtbubble-com/nxtbubble-com-provable-fair-seeding-event/">the nxtforum.org thread</a>
-                    for technical details.
+                    for technical details.<br>
+                    If you just want a quick tool to verify the individual rolls, checkout this tool by user M19: <a href="http://m19.ninja/nxtbubble-verifier/">NXTBubble Verifier</a>.
                 </p>
             </dd>
             <dd>
