--- a/client/css/game.css
+++ b/client/css/game.css
@@ -86,6 +86,7 @@ i {
     background-image: url(../img/controls-back.png);
     min-width: 0;
     border-radius: 3px;
+    height: 150px;
 }
 
 .controls-grid {
