--- a/client/css/game.css
+++ b/client/css/game.css
@@ -86,7 +86,7 @@ i {
     background-image: url(../img/controls-back.png);
     min-width: 0;
     border-radius: 3px;
-    height: 150px;
+    min-height: 150px;
 }
 
 .controls-grid {
