--- a/views/faq.html
+++ b/views/faq.html
@@ -10,6 +10,7 @@
             <ul class="side-nav">
                 <li><a href="#how-to-play">How to play?</a></li>
                 <li><a href="#bits">What is a NXT?</a></li>
+                <li><a href="#plugin">How to play from the NXT plugin?</a></li>
                 <li><a href="#giveaway">How can I get free NXT?</a></li>
                 <li><a href="#deposit">How do I deposit NXT?</a></li>
                 <li><a href="#deposit-address">How long is the unique account number valid?</a></li>
@@ -53,6 +54,13 @@
                 <p>
                     A NXT is the basic Unit of the NXT-Currency. At the time of this writing, a single NXT is worth roughly $0.0094 USD. A NXT is divisible 100,000,000 times to 1 NXTquant or 0.00000001 NXT.
                     You are able to deposit and withdraw NXT at any time by going to your <a href="/account">account page</a>.
+                </p>
+            </dd>
+            <dd>
+                <b><a name="plugin"></a>How to play from the NXT plugin?</b>
+                <p>
+                    You can play NXTBubble directly from you NRS NXT client. Just click this link and follow the instructions: <br>
+                    <a href="https://nxtforum.org/nxtbubble-com/nxtbubble-com-nxt-plugin-download-play-directly-in-nrs-1-5-x-clients/">Nxtforum.org thread</a>
                 </p>
             </dd>
             <dd>
