break line added

--- a/views/weekly-leaderboard.html
+++ b/views/weekly-leaderboard.html
@@ -119,7 +119,9 @@
     </table>
 
     <div class="warning">
-        * This price will be won by the player that holds this position on Sunday 11:59 pm GMT of Week {{=it.week}} {{=it.year}}. 
+        * This price will be won by the player that holds this position 
+        <br>
+        on Sunday 11:59 pm GMT of Week {{=it.week}} {{=it.year}}. 
         <br>
         Hint: This promo starts from week 22, previous prices are not rewarded.
     </div>
