--- a/views/leaderboard.html
+++ b/views/leaderboard.html
@@ -4,7 +4,8 @@
 <div class="content row panel radius">
 
     <h5 id="top">Top 20 players</h5>
-    <a href="/weekly-leaderboard?year={{=it.year}}&week={{=it.week}}">Weekly leaderboard</a>
+    <hr>
+    <a href="/weekly-leaderboard?year={{=it.year}}&week={{=it.week}}"><strong>Weekly leaderboard Promotion</strong></a>
     <hr>
     <table class="leaders">
         <thead>
