Add default date

--- a/views/template/header.html
+++ b/views/template/header.html
@@ -27,7 +27,7 @@
             {{??}}
                 <a href="/play">Play</a>
                 <a href="https://nxtforum.org/index.php?topic=9045.0" target="_blank">Invest</a>
-                <a href="/weekly-leaderboard?year={{=it.year}}&week={{=it.week}}">Promotion</a>
+                <a href="/weekly-leaderboard">Promotion</a>
                 <a href="/leaderboard">Leaderboard</a>
                 <a href="/stats">Stats</a>
                 <a href="/faq">FAQ</a>
