--- a/views/weekly-leaderboard.html
+++ b/views/weekly-leaderboard.html
@@ -123,7 +123,7 @@
         <br>
         on Sunday 11:59 pm GMT of Week {{=it.week}} {{=it.year}}. 
         <br>
-        Hint: This promo starts from week 22, previous prices are not rewarded.
+        Hint: This promo starts in week 22, previous prices are not rewarded.
     </div>
 </div>
 #}}
