--- a/views/index.html
+++ b/views/index.html
@@ -113,7 +113,7 @@
                 </div>
             </div>
             <br>
-            <h4>NXTBubble is running a weekly promotion, check it out here: <a href="/weekly-leaderboard?year=undefined&week=undefined">Weekly Leaderboard</a>.</h2>
+            <h4>NXTBubble is running a weekly promotion, check it out here: <a href="/weekly-leaderboard">Weekly Leaderboard</a>.</h2>
             <br>
             <h5 class="faucet">Claim 0.02 free NXT every minute, so you can always play for fun and without commitment!</h5>
             <div class="features row show-for-large-up" style="margin-bottom: 100px;">
