--- a/views/weekly-leaderboard.html
+++ b/views/weekly-leaderboard.html
@@ -38,7 +38,7 @@
                         <a href="/user/{{=leader.username}}">{{=leader.username}}</a>
                     </td>
                     <td>
-                        {{#def.format: { n: leader.net_profit, decimals: 0 } }}
+                        {{#def.format: { n: leader.net_profit, decimals: 0 } }} NXT
                     </td>
                     <td>
                         {{?leader.net_rank == 1 }}
@@ -93,7 +93,7 @@
                         <a href="/user/{{=leader.username}}">{{=leader.username}}</a>
                     </td>
                     <td>
-                        {{#def.format: { n: leader.wagered, decimals: 0 } }}
+                        {{#def.format: { n: leader.wagered, decimals: 0 } }} NXT
                     </td>
                     <td>
                         {{?leader.wagered_rank == 1 }}
