--- a/client/css/foundation.css
+++ b/client/css/foundation.css
@@ -1750,8 +1750,8 @@ meta.foundation-mq-topbar {
     border-color: #c7c7c7;
     color: #4f4f4f; }
   .alert-box.warning {
-    background-color: #BDF3AB;
-    border-color: #000000;
+    background-color: #f08a24;
+    border-color: #de770f;
     color: white; }
   .alert-box.info {
     background-color: #a0d3e8;
