--- a/views/weekly-leaderboard.html
+++ b/views/weekly-leaderboard.html
@@ -118,7 +118,7 @@
         </tbody>
     </table>
 
-    <div class="warning">
+    <div class="success">
         * This price will be won by the player that holds this position 
         <br>
         on Sunday 11:59 pm GMT of Week {{=it.week}} {{=it.year}}. 
