--- a/views/weekly-leaderboard.html
+++ b/views/weekly-leaderboard.html
@@ -23,7 +23,7 @@
                       Net Profit
                 </td>
                 <td>
-                    Price
+                    Prize
                 </td>
             </tr>
         </thead>
