--- a/views/weekly-leaderboard.html
+++ b/views/weekly-leaderboard.html
@@ -78,7 +78,7 @@
                     Wagered
                 </td>
                 <td>
-                    Price
+                    Prize
                 </td>
             </tr>
         </thead>
@@ -119,7 +119,7 @@
     </table>
 
     <div class="success">
-        * This price will be won by the player that holds this position 
+        * This prize will be won by the player that holds this position 
         <br>
         on Sunday 11:59 pm GMT of Week {{=it.week}} {{=it.year}}. 
         <br>
