--- a/views/weekly-leaderboard.html
+++ b/views/weekly-leaderboard.html
@@ -121,9 +121,9 @@
     <div class="success">
         * This prize will be won by the player that holds this position 
         <br>
-        on Sunday 11:59 pm GMT of Week {{=it.week}} {{=it.year}}. 
+        on Sunday 11:59 pm EDT of Week {{=it.week}} {{=it.year}}. 
         <br>
-        Hint: This promo starts in week 22, previous prices are not rewarded.
+        Hint: This promo started in week 22, previous prices are not rewarded.
     </div>
 </div>
 #}}
