Huge design update

--- a/views/table.html
+++ b/views/table.html
@@ -1,7 +1,7 @@
 {{##def.page_title = 'Play' #}}
 
 {{##def.content:
-    <div id="game">
+    <div id="game" class="wrapper">
         Game Loading...
     </div>
     <!--Global vars-->
