--- a/views/template/main.html
+++ b/views/template/main.html
@@ -42,6 +42,15 @@
     {{?}}
 
     <div class="content">
+        <div id="space-wrap" class="space-wrap">
+          <div class="ufo"></div>
+          <div class="ufo2"></div>
+          <div class="earth"></div>
+          <div class="space-gradient"></div>
+          <div class="space-container-wrap">
+            <div class="space-container"></div>
+          </div>
+        </div>
         {{#def.content || ""}}
     </div>
 
