--- a/client/css/chat.css
+++ b/client/css/chat.css
@@ -1,80 +1,92 @@
-
-.messages-container {
-    height: 100%;
-    border: 1px solid rgba(94, 94, 94, 0.2);
+.messages {
+  padding: 15px;
+  height: 100%;
 }
 
-.messages {
+.messages-container {
+  background: #181a1e;
+  -webkit-box-shadow: 0 2px 0 rgba(0,0,0,0.1), 0 1px 1px rgba(0,0,0,0.4);
+  box-shadow: 0 2px 0 rgba(0,0,0,0.1), 0 1px 1px rgba(0,0,0,0.4);
+  border-bottom: 1px solid #292d35;
+  border-right: 1px solid #292d35;
+  border-left: 1px solid #292d35;
+  overflow: hidden;
+  width: 365px;
+}
+
+.messages-list {
+    overflow-wrap: break-word;
     overflow-y: scroll;
     width: 100%;
     font-size: 1rem;
-    height: 253px;
     padding: 2px 3px;
 }
 
 .chat-input {
-    width: 100%;
-    border: 4px solid #dddddd;
-    background: rgba(255,255,255,0.7);
-    margin: 0;
-    padding: 5px;
+  border: 0;
+  color: black;
+  background: #fff;
+  height: 26px;
+  padding: 2px 2px 2px 10px;
+  font-size: 13px;
+  width: 100%;
+  -webkit-border-radius: 3px;
+  border-radius: 3px;
+  padding-right: 70px;
 }
+
 
 .msg-chat-message {
     line-height: 17px;
-}
-.msg-chat-message a{
-    color: #1e1e1e;
-    font-size: 13px;
-    font-weight: 600;
-}
-.msg-chat-message span {
-    color: #1e1e1e;
     font-size: 14px;
 }
 
-.msg-admin-message {
-    line-height: 17px;
-}
-.msg-admin-message a{
-    color: #ce1e1e;
+.msg-chat-message a {
+    color: #E58932;
     font-size: 13px;
     font-weight: 600;
-}
-.msg-admin-message span {
-    color: #5e1e1e;
-    font-size: 14px;
 }
 
-.msg-moderator-message {
-    line-height: 17px;
+/* Links within the message */
+.msg-chat-message .msg-body a {
+    color: #008cba; /* Blue */
+    font-family: Helvetica, Arial, sans-serif;
 }
-.msg-moderator-message a{
-    font-size: 13px;
-    color: #1e1e7e;
-    font-weight: 600;
+.msg-chat-message .msg-body a:hover {
+    text-decoration: underline;
 }
-.msg-moderator-message span {
-    color: #1e1e1e;
-    font-size: 14px;
+
+.msg-chat-message.msg-admin-message a {
+    color: #3d93da;
+}
+
+.msg-chat-message.msg-moderator-message a {
+    color: #51cc2a;
 }
 
 .msg-info-message {
     line-height: 17px;
 }
+
 .msg-info-message span {
     color: #1e5e1e;
     font-size: 14px;
 }
 
+.msg-highlight-message {
+    background: #ADD8E6;
+}
+
 .msg-mute-message {
     line-height: 17px;
 }
+
 .msg-mute-message a{
     color: #1e3e1e;
     font-size: 13px;
     font-weight: 600;
 }
+
 .msg-mute-message span {
     color: #1e3e1e;
     font-size: 14px;
