--- a/client/css/game.css
+++ b/client/css/game.css
@@ -1,4 +1,5 @@
 @import 'normalize.css';
+@import 'chat.css';
 @font-face {
   font-family: ubuntu_monobold;
   font-style: normal;
@@ -211,11 +212,18 @@ textarea:focus {
   top: 0;
   left: 0;
   bottom: 0;
-  right: 350px;
+  right: 0;
+}
+.col-middle {
+  position: absolute;
+  top: 0;
+  left: 380px;
+  bottom: 0;
+  right: 300px;
 }
 .col-right {
   position: absolute;
-  width: 350px;
+  width: 300px;
   right: 0;
   top: 0;
   bottom: 0;
@@ -12747,98 +12755,6 @@ nav ul li {
   color: #f71f1f;
   text-shadow: 0 0 5px #d70808;
 }
-.log-chat-container {
-  height: calc(100% - 30px);
-}
-.messages-container {
-  height: 100%;
-  background: #181a1e;
-  color: #b0b3c1;
-  -webkit-box-shadow: 0 2px 0 rgba(0,0,0,0.1), 0 1px 1px rgba(0,0,0,0.4);
-  box-shadow: 0 2px 0 rgba(0,0,0,0.1), 0 1px 1px rgba(0,0,0,0.4);
-  border: 1px solid #292d35;
-  position: relative;
-  overflow: hidden;
-  -webkit-border-radius: 0 0 3px 3px;
-  border-radius: 0 0 3px 3px;
-}
-.messages {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  padding: 5px 10px;
-  overflow-y: scroll;
-  position: absolute;
-  width: 100%;
-  bottom: 40px;
-  top: 0;
-}
-.msg-admin-message,
-.msg-chat-message {
-  margin-bottom: 3px;
-  overflow: hidden;
-  font-size: 15px;
-  word-wrap: break-word;
-}
-.msg-admin-message:last-child,
-.msg-chat-message:last-child {
-  margin-bottom: 0;
-}
-.msg-admin-message .sender,
-.msg-chat-message .sender {
-  font-weight: bold;
-  color: #e58929;
-}
-.msg-admin-message .content,
-.msg-chat-message .content {
-  display: inline;
-}
-.message-post {
-  position: absolute;
-  bottom: 0;
-  padding: 5px;
-  width: 100%;
-  height: 36px;
-  overflow: hidden;
-}
-.message-post input[type="text"] {
-  border: 0;
-  background: #fff;
-  height: 26px;
-  font-size: 13px;
-  width: 100%;
-  -webkit-border-radius: 3px;
-  border-radius: 3px;
-  padding-right: 70px;
-}
-.message-post button {
-  color: #fff;
-  position: relative;
-  background-color: #292d35;
-  -webkit-border-radius: 0 3px 3px 0;
-  border-radius: 0 3px 3px 0;
-  padding: 0 14px;
-  border: 0;
-  font-size: 12px;
-  text-transform: uppercase;
-  display: inline-block;
-  font-weight: 700;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  -webkit-transition: all 0.2s linear;
-  -moz-transition: all 0.2s linear;
-  -o-transition: all 0.2s linear;
-  -ms-transition: all 0.2s linear;
-  transition: all 0.2s linear;
-  position: absolute;
-  top: 0;
-  right: 0;
-  line-height: 26px;
-  height: 26px;
-  margin: 5px;
-}
 .chat-log-tabs {
   background: transparent;
   position: relative;
@@ -12880,6 +12796,7 @@ nav ul li {
   -webkit-border-radius: 3px 3px 0 0;
   border-radius: 3px 3px 0 0;
 }
+
 .gui {
   position: absolute;
   width: 100%;
