--- a/client/css/game.css
+++ b/client/css/game.css
@@ -1,4 +1,5 @@
 @import 'normalize.css';
+@import 'header.css';
 @import 'chat.css';
 @font-face {
   font-family: ubuntu_monobold;
@@ -13112,166 +13113,6 @@ nav ul li {
   font-size: 16px;
   line-height: 30px;
   text-transform: uppercase;
-}
-.header {
-  height: 54px;
-  background: #292d35 url("/img/header-bg.png");
-  -webkit-box-shadow: inset 0 -1px 0 rgba(255,255,255,0.025), 0 1px 3px rgba(0,0,0,0.4);
-  box-shadow: inset 0 -1px 0 rgba(255,255,255,0.025), 0 1px 3px rgba(0,0,0,0.4);
-  position: relative;
-  zoom: 1;
-}
-.header:before,
-.header:after {
-  content: "";
-  display: table;
-}
-.header:after {
-  clear: both;
-}
-.header .auth {
-  float: right;
-}
-.header .auth li {
-  margin-left: 12px;
-}
-.header ul {
-  margin: 12px;
-}
-.header-el {
-  float: right;
-  margin: 12px 6px;
-}
-.logo {
-  float: left;
-  height: 30px;
-  width: 200px;
-  text-indent: -999px;
-  overflow: hidden;
-  background-image: url("/img/tothemoon-logo.png");
-  margin: 12px;
-}
-@media all and (-webkit-min-device-pixel-ratio: 1.5), (min--moz-device-pixel-ratio: 1.5), (-o-min-device-pixel-ratio: 1.5/1), (min-device-pixel-ratio: 1.5), (min-resolution: 138dpi), (min-resolution: 1.5dppx) {
-  .logo {
-    background-image: url("/img/tothemoon-logo@2x.png");
-    -webkit-background-size: 200px 30px;
-    -moz-background-size: 200px 30px;
-    background-size: 200px 30px;
-  }
-}
-.logo a {
-  display: block;
-}
-.balance {
-  margin-left: 30px;
-  background: #1c1e25;
-  -webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,0.3);
-  box-shadow: inset 0 1px 2px rgba(0,0,0,0.3);
-  -webkit-border-radius: 5px;
-  border-radius: 5px;
-  padding: 0 15px 0 27px;
-  height: 30px;
-  line-height: 30px;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  position: relative;
-}
-.balance:before {
-  content: "";
-  background-image: url("/img/balance-icon.png");
-  height: 36px;
-  width: 36px;
-  display: block;
-  position: absolute;
-  left: -18px;
-  top: -3px;
-}
-@media all and (-webkit-min-device-pixel-ratio: 1.5), (min--moz-device-pixel-ratio: 1.5), (-o-min-device-pixel-ratio: 1.5/1), (min-device-pixel-ratio: 1.5), (min-resolution: 138dpi), (min-resolution: 1.5dppx) {
-  .balance:before {
-    background-image: url("/img/balance-icon@2x.png");
-    -webkit-background-size: 36px 36px;
-    -moz-background-size: 36px 36px;
-    background-size: 36px 36px;
-  }
-}
-.balance .amount {
-  font-size: 18px;
-  font-weight: 600;
-  text-shadow: 0 1px 0 rgba(0,0,0,0.5);
-}
-.balance .currency {
-  font-size: 13px;
-  color: #bbbcbd;
-}
-.account {
-  background-color: #1c1e25;
-  -webkit-border-radius: 5px;
-  border-radius: 5px;
-  background-image: -webkit-linear-gradient(transparent, rgba(0,0,0,0.15));
-  background-image: -moz-linear-gradient(transparent, rgba(0,0,0,0.15));
-  background-image: -o-linear-gradient(transparent, rgba(0,0,0,0.15));
-  background-image: -ms-linear-gradient(transparent, rgba(0,0,0,0.15));
-  background-image: linear-gradient(transparent, rgba(0,0,0,0.15));
-  text-shadow: 1px 1px 0 rgba(0,0,0,0.15);
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  font-weight: 600;
-  border: 0;
-  text-transform: uppercase;
-  font-size: 13px;
-  height: 30px;
-  line-height: 30px;
-  display: block;
-  text-align: right;
-  min-width: 120px;
-  padding: 0 15px;
-  margin-right: 12px;
-}
-.account a {
-  color: #fff;
-}
-.account > a {
-  float: left;
-}
-.account:hover {
-  -webkit-border-radius: 3px 3px 0 0;
-  border-radius: 3px 3px 0 0;
-}
-.account:hover .caret {
-  border-top-color: #fff;
-}
-.account .caret {
-  border-top-color: #b0b3c1;
-  text-align: right;
-}
-.account .dropdown {
-  left: 0;
-  background: #1a1d22;
-  -webkit-border-radius: 0 0 3px 3px;
-  border-radius: 0 0 3px 3px;
-  overflow: hidden;
-  list-style: none;
-}
-.account .dropdown li {
-  display: block;
-  float: none;
-  color: rgba(255,255,255,0.8);
-}
-.account .dropdown li:hover {
-  color: #fff;
-  background: #17191d;
-}
-.account .dropdown li a {
-  border-top: 1px solid rgba(255,255,255,0.03);
-  padding: 0 15px;
-  height: 30px;
-  line-height: 30px;
-  display: block;
-  font-size: 13px;
-  font-weight: normal;
 }
 
 .log-chat input {
