--- a/client/css/header.css
+++ b/client/css/header.css
@@ -30,10 +30,7 @@
 .logo {
   float: left;
   height: 30px;
-  width: 200px;
-  text-indent: -999px;
   overflow: hidden;
-  background-image: url("/img/tothemoon-logo.png");
   margin: 12px;
 }
 @media all and (-webkit-min-device-pixel-ratio: 1.5), (min--moz-device-pixel-ratio: 1.5), (-o-min-device-pixel-ratio: 1.5/1), (min-device-pixel-ratio: 1.5), (min-resolution: 138dpi), (min-resolution: 1.5dppx) {
@@ -46,6 +43,7 @@
 }
 .logo a {
   display: block;
+  color: white;
 }
 .balance {
   margin-left: 30px;
@@ -116,6 +114,9 @@
   padding: 0 15px;
   margin-right: 12px;
 }
+.account a {
+  color: white;
+}
 .account > a {
   float: left;
 }
@@ -153,6 +154,16 @@
   height: 30px;
   line-height: 30px;
   display: block;
+  font-size: 13px;
+  font-weight: normal;
+}
+
+.menu a {
+  color: white;
+  border-top: 1px solid rgba(255,255,255,0.03);
+  padding: 0 15px;
+  height: 30px;
+  line-height: 30px;
   font-size: 13px;
   font-weight: normal;
 }
