--- a/views/index.html
+++ b/views/index.html
@@ -3,154 +3,77 @@
 {{##def.content:
     <div class="index">
         <div class="i-content">
-            <div class="row">
-                <h4 class="sub-title">
-                    The NXT Gambling Game
-                </h4>
-            </div>
-            <div class="large-12 columns">
-                <a href="/play" class="play green border-button">
-                    Play Now!
-                </a>
-            </div>
-            <div class="columns large-10">
-                <ul class="inline-list right menu">
-                    <li><a href="/faq">FAQ</a></li>
-                    <li><a href="/contact">Contact</a></li>
-                    <li><a href="/leaderboard">Top Players</a></li>
-                </ul>
+            <div class="hero-unit">
+              <h1 class="title">Launch your NXT to the moon!</h1>
+              <h4 class="faucet">Receive <em>0.02 free NXT</em> per minute, so you can always play for fun and without commitment</h4>
+              <a href="/play" class="cta">Play Now</a>
             </div>
 
 
-            <div class="features row show-for-large-up">
+            <div class="features">
+              <div class="feature-wrap">
+                <div class="feature">
+                  <img src="img/icons/bullseye.svg" alt="Skill"/>
+                  <h2>1% Skill</h4>
+                  <p class="text">Anyone can board a rocket, but it takes <a href="/guide">skill</a> to be a real astronaut.</p>
+                </div>
+              </div>
+              <div class="feature-wrap">
+                <div class="feature">
+                  <img src="img/icons/clock.svg" alt="Real Time"/>
+                  <h2>Real Time</h4>
+                  <p class="text">Liftoff in T-minus 3..2.. Hurry! Next destination: moon.</p>
+                </div>
+              </div>
+              <div class="feature-wrap">
+                <div class="feature">
+                  <img src="img/icons/secure.svg" alt="Secure"/>
+                  <h2>Provably Fair</h4>
+                  <p class="text">All rocket launches are approved by NASA and <a href="faq#fair">Provably fair</a>.</p>
+                </div>
+              </div>
+              <div class="feature-wrap">
+                <div class="feature">
+                  <img src="img/icons/group.svg" alt="Social"/>
+                  <h2>Be Social</h4>
+                  <p class="text">We're all in the same rocket, so lets enjoy the ride together!</p>
+                </div>
+              </div>
+            </div>
 
-                <div class="feature columns large-3 small-6">
-                    <div>
-                        <img src="img/icons/dart.png" alt=""/>
-                    </div>
-                    <h4>99% Luck<br />&nbsp;1% Skill</h4>
-                    <p class="text">
-                        Play for fun! Or play to win! <br>
-                        <a href="/guide">See strategy guide</a>
-                    </p>
-                </div>
-                <div class="feature columns large-3 small-6">
-                    <div>
-                        <img src="img/icons/chart.png" alt=""/>
-                    </div>
-                    <h4>Real Time</h4>
-                    <p class="text">
-                        Watch your fortune rise<br > in real time!
-                    </p>
-                </div>
-                <div class="feature columns large-3 small-6">
-                    <div>
-                        <img src="img/icons/secure.png" alt=""/>
-                    </div>
-                    <h4>Secure</h4>
-                    <p class="text">
-                        Offline storage<br>
-                        <a href="faq#fair">Provably fair</a><br>
-                        Razor thin <a href="faq#odds">house edge</a> (between 0.5% and 1.5%)
-                    </p>
-                </div>
-                <div class="feature columns large-3 small-6">
-                    <div>
-                        <img src="img/icons/multiplayer.png" alt=""/>
-                    </div>
-                    <h4>Social</h4>
-                    <p class="text">
-                        Play with friends<br />
-                        and beat your foes
-                    </p>
-                </div>
+            <div class="features">
+                <span style="text-align: center; font-size: 200%;">NXTBubble is running a weekly promotion, check it out here: <a href="/weekly-leaderboard">Weekly Leaderboard</a>.</span>
+            </div>
 
-            </div>
-            <div class="features row show-for-medium-down">
-                <div class="row">
-                    <div class="feature columns large-3 small-6">
-                        <div>
-                            <img src="img/icons/dart.png" alt=""/>
-                        </div>
-                        <h4>99% Luck<br />&nbsp;1% Skill</h4>
-                        <p class="text">
-                            Play for fun! Or play to win! <br>
-                            <a href="/guide">See strategy guide</a>
-                        </p>
-                    </div>
-                    <div class="feature columns large-3 small-6">
-                        <div>
-                            <img src="img/icons/chart.png" alt=""/>
-                        </div>
-                        <h4>Real Time</h4>
-                        <p class="text">
-                            Watch your fortune build or bust in real time
-                        </p>
+            <div class="features">
+                <div class="feature-wrap">
+                    <div class="feature">
+                        <a href="https://github.com/TwinWinNerD/bustabit-gameserver" target="_blank">
+                          <img src="img/icons/github.png" alt=""/>
+                        </a>
+                        <p class="text">Source code by Bustabit.</p>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="feature columns large-3 small-6">
-                        <div>
-                            <img src="img/icons/secure.png" alt=""/>
-                        </div>
-                        <h4>Secure</h4>
-                        <p class="text">
-                            Offline storage<br>
-                            <a href="faq#fair">Provably fair</a><br>
-                            Razor thin <a href="faq#odds">house edge</a>
-                        </p>
+                <div class="feature-wrap">
+                    <div class="feature">
+                        <a href="http://nxt.org/" target="_blank">
+                          <img src="img/icons/nxtinside.png" alt=""/>
+                        </a>
+                        <p class="text">Powered by NXT.</p>
                     </div>
-                    <div class="feature columns large-3 small-6">
-                        <div>
-                            <img src="img/icons/multiplayer.png" alt=""/>
-                        </div>
-                        <h4>Social</h4>
-                        <p class="text">
-                            Play with friends<br />
-                            and beat your foes
-                        </p>
+                </div>
+                <div class="feature-wrap">
+                    <div class="feature">
+                        <a href="http://nxtcs.com/" target="_blank" style="color: black;">
+                          <span style="font-size: 300%; font-weight: bold;">
+                            NXTCS
+                          </span>
+                        </a>
+                        <p class="text">Powered by NXTCS.</p>
                     </div>
                 </div>
             </div>
-            <br>
-            <h5>NXTBubble is running a weekly promotion, check it out here: <a href="/weekly-leaderboard">Weekly Leaderboard</a>.</h5>
-            <br>
-            <h5 class="faucet">Claim 0.02 free NXT every minute, so you can always play for fun and without commitment!</h5>
-            <div class="features row show-for-large-up" style="margin-bottom: 100px;">
-                <div class="feature columns large-4 small-6">
-                    <div>
-                      <a href="https://github.com/TwinWinNerD/bustabit-gameserver" target="_blank">
-                        <img src="img/icons/github.png" alt=""/>
-                      </a>
-                    </div>
-                    <p class="text" style="margin-top: 20px;">
-                      Source code by Bustabit
-                    </p>
-                </div>
-                <div class="columns large-4 small-6">
-                    <div>
-                      <a href="http://nxt.org/" target="_blank">
-                        <img src="img/icons/nxtinside.png" alt=""/>
-                      </a>
-                    </div>
-                    <p class="text" style="margin-top: 20px;">
-                      Powered by NXT
-                    </p>
-                </div>
-                <div class="feature columns large-4 small-6">
-                    <div style="margin: 30px;">
-                      <a href="http://nxtcs.com/" target="_blank" style="color: black;">
-                        <span style="font-size: 300%; font-weight: bold;">
-                          NXTCS
-                        </span>
-                      </a>
-                    </div>
-                    <p class="text" style="padding-top: 12px;">
-                      Powered by NXTCS
-                    </p>
-                </div>
             </div>
-        </div>
     </div>
 #}}
 {{#def.include('./template/main')}}
