--- a/views/template/header.html
+++ b/views/template/header.html
@@ -34,7 +34,7 @@
         <span id="balance_bits" class="amount">{{#def.format:{n: it.user.balance_satoshis, decimals:4} }}</span>
         <span class="currency">BITS</span>
       </div>
-      <div class="header-el">
+      <div class="menu header-el">
           <a href="/play">Play</a>
           <a href="https://nxtforum.org/index.php?topic=9045.0" target="_blank">Invest</a>
           <a href="/request">Faucet</a>
