--- a/views/security.html
+++ b/views/security.html
@@ -14,45 +14,32 @@
             document.getElementById('confirmation').setCustomValidity("Confirmation and password should be the same");
         } else document.getElementById("confirmation").setCustomValidity('');
     }
-    function logout() {
-        if (document.getElementById('logout') ) {
-            if (confirm("Are you sure you want to log out?")) {
-                document.getElementById("logout").submit();
-            }
-        }
-    }
 </script>
 <form action="/logout" method="post" id='logout'></form>
 <div class="content row panel radius">
 
     <div class="settings">
-        <div class="small-2 columns">
-            <ul class="menu">
-                <li>
-                    <a href="/account">Account</a>
-                </li>
-                <li class="active">
-                   Security
-                </li>
-                <li>
-                    <a href="/deposit">Deposit</a>
-                </li>
-                <li>
-                    <a href="/withdraw">Withdraw</a>
-                </li>
+        <ul class="menu">
+            <li>
+                <a href="/account">Account</a>
+            </li>
+            <li class="active">
+               Security
+            </li>
+            <li>
+                <a href="/deposit">Deposit</a>
+            </li>
+            <li>
+                <a href="/withdraw">Withdraw</a>
+            </li>
 
-                <li>
-                    <a href="/support">Support</a>
-                </li>
-                <li>
-                    <a onclick="logout();">
-                        Logout
-                    </a>
-                </li>
-            </ul>
-        </div>
-        <div class="small-10 columns sets-content">
+            <li>
+                <a href="/support">Support</a>
+            </li>
+        </ul>
+        <div class="panel">
             <h5>Update Your Password</h5>
+            <hr>
             <form action="reset-password" method="post" >
                 <label for="old_password">Old Password</label>
                 <input name="old_password" type="password" id="old_password" autocomplete="off" required/>
@@ -125,6 +112,6 @@
             {{?}}
         </div>
     </div>
-    </div>
+</div>
 #}}
 {{#def.include('./template/main')}}
