--- a/views/withdraw_request.html
+++ b/views/withdraw_request.html
@@ -14,32 +14,25 @@
 <div class="content row panel radius">
 
     <div class="settings">
-        <div class="small-2 columns">
-            <ul class="menu">
-                <li>
-                    <a href="/account">Account</a>
-                </li>
-                <li>
-                    <a href="/security">Security</a>
-                </li>
-                <li>
-                    <a href="/deposit">Deposit</a>
-                </li>
-                <li >
-                    <a class="active" href="/withdraw">Withdraw</a>
-                </li>
+        <ul class="menu">
+            <li>
+                <a href="/account">Account</a>
+            </li>
+            <li>
+                <a href="/security">Security</a>
+            </li>
+            <li>
+                <a href="/deposit">Deposit</a>
+            </li>
+            <li >
+                <a class="active" href="/withdraw">Withdraw</a>
+            </li>
 
-                <li>
-                    <a href="/support">Support</a>
-                </li>
-                <li>
-                    <a onclick="logout();">
-                        Logout
-                    </a>
-                </li>
-            </ul>
-        </div>
-        <div class="small-10 columns sets-content">
+            <li>
+                <a href="/support">Support</a>
+            </li>
+        </ul>
+        <div class="panel">
             <h4>Request A Withdrawal</h4>
             <p class="small">
                 **The minimum amount for a withdrawal is 1 NXT. You will receive 1 NXT less than what you withdraw,
