--- a/client/css/header.css
+++ b/client/css/header.css
@@ -33,6 +33,13 @@
   overflow: hidden;
   margin: 12px;
 }
+
+h1.logo {
+  color: green;
+  font-weight: bold;
+  font-style: inherit;
+  font-size: 2em;
+}
 @media all and (-webkit-min-device-pixel-ratio: 1.5), (min--moz-device-pixel-ratio: 1.5), (-o-min-device-pixel-ratio: 1.5/1), (min-device-pixel-ratio: 1.5), (min-resolution: 138dpi), (min-resolution: 1.5dppx) {
   .logo {
     background-image: url("/img/tothemoon-logo@2x.png");
