--- a/views/deposit.html
+++ b/views/deposit.html
@@ -12,32 +12,25 @@
 <form action="/logout" method="post" id='logout'></form>
     <div class="content row panel radius">
         <div class="settings">
-            <div class="small-2 columns">
-                <ul class="menu">
-                    <li>
-                        <a href="/account">Account</a>
-                    </li>
-                    <li>
-                        <a href="/security">Security</a>
-                    </li>
-                    <li class="active">
-                        Deposit
-                    </li>
-                    <li>
-                        <a href="/withdraw">Withdraw</a>
-                    </li>
+            <ul class="menu">
+                <li>
+                    <a href="/account">Account</a>
+                </li>
+                <li>
+                    <a href="/security">Security</a>
+                </li>
+                <li class="active">
+                    Deposit
+                </li>
+                <li>
+                    <a href="/withdraw">Withdraw</a>
+                </li>
 
-                    <li>
-                        <a href="support">Support</a>
-                    </li>
-                    <li>
-                        <a onclick="logout();">
-                            Logout
-                        </a>
-                    </li>
-                </ul>
-            </div>
-            <div class="small-10 columns setts-content">
+                <li>
+                    <a href="support">Support</a>
+                </li>
+            </ul>
+            <div class="panel">
                 <h5 class="">Deposit History</h5>
                 <hr>
                 {{?it.user.deposits.length > 0}}
@@ -62,7 +55,6 @@
                 {{??}}
                     <p>You don't have deposits</p>
                 {{?}}
-
             </div>
         </div>
     </div>
