--- a/views/login.html
+++ b/views/login.html
@@ -18,11 +18,11 @@
         <hr>
         <div class="field">
           <label>Username</label>
-          <input type="text" name="user[name]" required/>
+          <input type="text" name="username" required/>
         </div>
         <div class="field">
           <label>Password <small><a href="/forgot-password">Forgot your password?</a></small></label>
-          <input type="password" name="user[password]" required />
+          <input type="password" name="password" required />
         </div>
         <div class="g-recaptcha" data-sitekey="6LdfOAYTAAAAAObF55v-yVI8kesqwIimDitHRsGU" data-callback="enableSubmit"></div>
 
